# Minecraft-Injection-Client

./: .gitignore  CHANGES.md  CMakeLists.txt  MODULE_TEMPLATE.cpp  PLATFORM.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SOLUTION_SUMMARY.md  build.bat  build.sh
Minecraf.7FC99F44/x64/Debug/: vc143.idb
Minecraf.7FC99F44/x64/Debug/Minecraf.7FC99F44.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Minecraft-1.8.9-Injection-Client.lastbuildstate
docs/: ESP_MODULE.md  MAPPINGS.md
src/: dllmain.cpp
src/core/: EventBus.cpp  EventBus.h  Module.cpp  Module.h  ModuleManager.cpp  ModuleManager.h
src/injector/: Injector.cpp  Injector.h  main.cpp
src/jni/: JNIUtils.cpp  JNIUtils.h  MappingLoader.cpp  MappingLoader.h  MinecraftClasses.cpp  MinecraftClasses.h
src/modules/: ESP.cpp  ESP.h  Flight.cpp  Flight.h
src/utils/: Logger.cpp  Logger.h
